--- a/chatbot.html
+++ b/chatbot.html
@@ -86,7 +86,7 @@
         <img src="./assets/image/bgCatPutih.png" alt="" class="absolute left-1/2 -translate-x-1/2 top-6 h-14 object-contain z-10" />
 
         <div class="relative w-full h-full grid grid-cols-3">
-        <a href="./index.html" class="text-green-700 hover:text-green-800 font-semibold text-sm sm:text-base pl-2 mt-4 z-20"> ← Kembali </a>
+        <a href="./index.html" class="text-green-700 hover:text-green-800 font-semibold text-sm sm:text-base mt-2 md:mt-4 z-20"> ← Kembali </a>
 
         <h1 class="text-center my-auto text-2xl md:text-4xl font-spicy font-bold text-black z-20"><span class="text-[#3E9F2B]">Se</span><span class="text-[#53DD37]">ad</span>Bot</h1>
         </div>
@@ -103,7 +103,7 @@
         </div>
     </main>
 
-    <footer class="bg-primary-light p-4 md:p-6 rounded-t-3xl flex items-center">
+    <footer class="bg-primary-light w-full max-w-screen p-4 md:p-6 rounded-t-3xl flex items-center">
         <input 
         id="userInput" 
         type="text" 
