--- a/resep.html
+++ b/resep.html
@@ -90,7 +90,7 @@
     <img src="./assets/image/bgCatPutih.png" alt="" class="absolute left-1/2 -translate-x-1/2 top-6 h-14 object-contain z-10" />
 
     <div class="relative w-full h-full grid grid-cols-3">
-      <a href="./index.html" class="text-green-700 hover:text-green-800 font-semibold text-sm sm:text-base pl-2 mt-4 z-20"> ← Kembali </a>
+        <a href="./index.html" class="text-green-700 hover:text-green-800 font-semibold text-sm sm:text-base mt-2 md:mt-4 z-20"> ← Kembali </a>
 
       <h1 class="text-center my-auto text-2xl md:text-4xl font-spicy font-bold text-black z-20"> Resep<span class="text-[#3E9F2B]">Se</span><span class="text-[#53DD37]">ad</span></h1>
     </div>
