--- a/chatbot.html
+++ b/chatbot.html
@@ -103,17 +103,18 @@
         </div>
     </main>
 
-    <footer class="bg-primary-light w-full max-w-screen p-4 md:p-6 rounded-t-3xl flex items-center">
-        <input 
+    <!-- Input ChatBot -->
+    <div class="bg-primary-light w-full p-4 md:p-6 rounded-t-3xl flex items-center gap-2">
+    <input 
         id="userInput" 
         type="text" 
         placeholder="Tanyakan Sesuatu..." 
-        class="flex-1 border rounded-lg px-4 py-3 mr-2 focus:outline-none focus:ring-2 focus:ring-primary bg-putih text-hitam"
-        />
-        <button id="sendBtn" class="bg-primary-dark hover:bg-primary text-white px-4 py-3 rounded-lg shadow transition">
+        class="flex-1 min-w-0 border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary bg-putih text-hitam"
+    />
+    <button id="sendBtn" class="flex items-center justify-center bg-primary-dark hover:bg-primary text-white px-3 py-2 rounded-lg shadow transition">
         <i class="fa-solid fa-paper-plane"></i>
-        </button>
-    </footer>
+    </button>
+    </div>
 
 
     <script src="./scripts/dataChatbot.js"></script>
