--- a/chatbot.html
+++ b/chatbot.html
@@ -78,7 +78,7 @@
 
 <body class="bg-warna-latar flex flex-col h-screen">
 
-    <header class="relative w-full max-w-screen overflow-x-hidden h-24 bg-cover bg-primary/30 bg-center px-4"
+    <header class="relative w-full max-w-screen overflow-x-hidden h-16 md:h-24 bg-cover bg-primary/30 bg-center px-4"
         style="background-image: url(assets/image/navcalc.png); box-shadow: 0 8px 10px -2px rgba(0,0,0,0.25)">
 
         <img src="./assets/image/penabgcalc.png" alt="Background" class="absolute inset-0 w-full h-full object-cover opacity-40" />
@@ -104,16 +104,16 @@
     </main>
 
     <!-- Input ChatBot -->
-    <div class="bg-primary-light w-full p-4 md:p-6 rounded-t-3xl flex items-center gap-2">
-    <input 
-        id="userInput" 
-        type="text" 
-        placeholder="Tanyakan Sesuatu..." 
-        class="flex-1 min-w-0 border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary bg-putih text-hitam"
-    />
-    <button id="sendBtn" class="flex items-center justify-center bg-primary-dark hover:bg-primary text-white px-3 py-2 rounded-lg shadow transition">
-        <i class="fa-solid fa-paper-plane"></i>
-    </button>
+    <div class="bg-primary-light w-full p-4 md:p-6 rounded-t-3xl flex items-center gap-2 shrink-0">
+        <input 
+            id="userInput" 
+            type="text" 
+            placeholder="Tanyakan Sesuatu..." 
+            class="flex-1 min-w-0 border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary bg-putih text-hitam"
+        />
+        <button id="sendBtn" class="flex items-center justify-center bg-primary-dark hover:bg-primary text-white px-3 py-2 rounded-lg shadow transition">
+            <i class="fa-solid fa-paper-plane"></i>
+        </button>
     </div>
 
 
