Fix header chatbot

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 
   <!-------- Section Manfaat -------->
-  <section id="manfaat" class=" w-full max w-screen-max-w-screen px-4 sm:px-6 md:px-10 lg:px-20 mt-24"></section>
+  <section id="manfaat" class=" w-full max-w-screen px-4 sm:px-6 md:px-10 lg:px-20 mt-24"></section>
     <div class="text-center mb-10">
       <h2 class="font-bold font-spicy text-center mb-2 text-[52px] lg:text-[72px] text-secondary drop-shadow-2xl">
         Manfaat Sead
