--- a/chatbot.html
+++ b/chatbot.html
@@ -78,7 +78,7 @@
 
 <body class="bg-warna-latar flex flex-col h-screen">
 
-    <header class="relative w-full max-w-screen overflow-x-hidden h-16 md:h-24 bg-cover bg-primary/30 bg-center px-4"
+    <header class="relative w-full max-w-screen overflow-x-hidden h-24 bg-cover bg-primary/30 bg-center px-4"
         style="background-image: url(assets/image/navcalc.png); box-shadow: 0 8px 10px -2px rgba(0,0,0,0.25)">
 
         <img src="./assets/image/penabgcalc.png" alt="Background" class="absolute inset-0 w-full h-full object-cover opacity-40" />
