--- a/berita.html
+++ b/berita.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./assets/logo.png" type="image/png">
   <title>Berita Sead</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
         tailwind.config = {
@@ -41,14 +42,14 @@
       font-family: 'Poppins';
       src: url('./assets/fonts/Poppins/Poppins-SemiBold.ttf') format('truetype');
       font-weight: 600;
-      font-style: semibold;
+      font-style: normal;
     }
     
     @font-face {
       font-family: 'Spicy Rice';
       src: url('./assets/fonts/Spicy_Rice/SpicyRice-Regular.ttf') format('truetype');
       font-weight: 700;
-      font-style: bold;
+      font-style: normal;
     }
 
     body {
@@ -93,10 +94,12 @@
 
     <img src="./assets/image/penabgcalc.png" alt="Background" class="absolute inset-0 w-full h-full object-cover opacity-40" />
 
-    <img src="./assets/image/bgCatPutih.png" alt="" class="absolute left-1/2 -translate-x-1/2 top-6 h-14 object-contain z-10" />
+    <img src="./assets/image/bgCatPutih.png" alt="" class="absolute left-1/2 -translate-x-1/2 top-7 md:top-6  h-10 md:h-14 object-contain z-10" />
 
     <div class="relative w-full h-full grid grid-cols-3">
-        <a href="./index.html" class="text-green-700 hover:text-green-800 font-semibold text-sm sm:text-base mt-2 md:mt-4 z-20"> ← Kembali </a>
+      <a href="./index.html" 
+        class="text-primary-dark hover:text-hitam font-semibold text-sm md:text-base mt-2 md:mt-4 z-20"><i class="fa-solid fa-arrow-left"></i>Kembali
+      </a>
 
       <h1 class="text-center my-auto text-2xl md:text-4xl font-spicy font-bold text-black z-20"> Berita<span class="text-[#3E9F2B]">Se</span><span class="text-[#53DD37]">ad</span></h1>
     </div>
@@ -107,12 +110,12 @@
   <div class="w-full px-6 md:px-20 py-10 max-w-screen-xl mx-auto">
     <h1 class="text-4xl text-center font-spicy font-bold text-primary-dark mb-6">Mengapa harus Sead?</h1>
     <p class="text-center text-gray-800 md:text-lg">
-      <span class="text-primary-dark font-medium">Sead,</span> singkatan dari <b>Senin Absen Daging,</b> adalah langkah kecil dengan dampak besar. Dengan tidak mengonsumsi daging satu hari dalam seminggu, kamu membantu mengurangi jejak karbon, menghemat air bersih, dan menjaga kelestarian bumi
+      <span class="text-primary-dark font-semibold">Sead,</span> singkatan dari <b>Senin Absen Daging,</b> adalah langkah kecil dengan dampak besar. Dengan tidak mengonsumsi daging satu hari dalam seminggu, kamu membantu mengurangi jejak karbon, menghemat air bersih, dan menjaga kelestarian bumi
     </p>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 lg:gap-6 mt-10">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3 lg:gap-6 mt-10">
 
-      <div class="bg-white p-6 rounded-lg shadow-lg text-center border-2 border-primary hover:-translate-y-2 transition-transform duration-300 group">
+      <div class="bg-white p-6 rounded-lg shadow-lg text-center border-2 border-primary hover:-translate-y-2 transition-transform duration-300 group sm:col-span-2 lg:col-span-1">
         <img src="./assets/image/bumi.png" alt="Bumi" class="w-24 h-24 object-cover mx-auto mb-4">
         <!-- https://share.google/images/VrZpSbsiHAW1aqyLN -->
         <h2 class="text-lg font-semibold text-primary">Emisi Gas Rumah Kaca</h2>
