--- a/chatbot.html
+++ b/chatbot.html
@@ -41,14 +41,14 @@
         font-family: 'Poppins';
         src: url('./assets/fonts/Poppins/Poppins-SemiBold.ttf') format('truetype');
         font-weight: 600;
-        font-style: semibold;
+        font-style: normal;
         }
         
         @font-face {
         font-family: 'Spicy Rice';
         src: url('./assets/fonts/Spicy_Rice/SpicyRice-Regular.ttf') format('truetype');
         font-weight: 700;
-        font-style: bold;
+        font-style: normal;
         }
 
         body {
@@ -83,10 +83,12 @@
 
         <img src="./assets/image/penabgcalc.png" alt="Background" class="absolute inset-0 w-full h-full object-cover opacity-40" />
 
-        <img src="./assets/image/bgCatPutih.png" alt="" class="absolute left-1/2 -translate-x-1/2 top-6 h-14 object-contain z-10" />
+        <img src="./assets/image/bgCatPutih.png" alt="" class="absolute left-1/2 -translate-x-1/2 top-7 md:top-6 h-10 md:h-14 object-contain z-10" />
 
         <div class="relative w-full h-full grid grid-cols-3">
-        <a href="./index.html" class="text-green-700 hover:text-green-800 font-semibold text-sm sm:text-base mt-2 md:mt-4 z-20"> ← Kembali </a>
+        <a href="./index.html" 
+            class="text-primary-dark hover:text-hitam font-semibold text-sm md:text-base mt-2 md:mt-4 z-20"><i class="fa-solid fa-arrow-left"></i>Kembali
+        </a>
 
         <h1 class="text-center my-auto text-2xl md:text-4xl font-spicy font-bold text-black z-20"><span class="text-[#3E9F2B]">Se</span><span class="text-[#53DD37]">ad</span>Bot</h1>
         </div>
@@ -103,7 +105,7 @@
         </div>
     </main>
 
-    <!-- Input ChatBot -->
+    <!-- Input User -->
     <div class="bg-primary-light w-full p-4 md:p-6 rounded-t-3xl flex items-center gap-2 shrink-0">
         <input 
             id="userInput" 
