--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" rel="stylesheet">
-  <!-- Font Awesome untuk icon di seluruh website -->
+  <!-- Font Awesome untuk icon di seluruh halaman website-->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
       tailwind.config = {
@@ -41,14 +41,14 @@
       font-family: 'Poppins';
       src: url('./assets/fonts/Poppins/Poppins-SemiBold.ttf') format('truetype');
       font-weight: 600;
-      font-style: semibold;
+      font-style: normal;
     }
     
     @font-face {
       font-family: 'Spicy Rice';
       src: url('./assets/fonts/Spicy_Rice/SpicyRice-Regular.ttf') format('truetype');
       font-weight: 700;
-      font-style: bold;
+      font-style: normal;
     }
 
     body {
@@ -84,7 +84,7 @@
   <!-- buat di Figma -->
 
 
-  <!--- Menu Navigasi ----->
+  <!--- Navbar(menu navigasi) ----->
   <nav class="w-[90%] md:w-[75%] fixed z-50 border-2 border-primary-dark flex justify-between items-center px-6 py-1 bg-white rounded-2xl left-1/2 top-12 transform -translate-x-1/2 -translate-y-1/2 shadow-[0px_0px_5px_#147700]">
       <a href="#" class="flex justify-center items-center">
         <img src="./assets/logo.png" alt="Logo" class="h-8 mr-2">
@@ -174,10 +174,10 @@
       <!-- Deskripsi/Penjelasan -->
       <div class="text-sm md:text-base text-hitam">
         <p class="mb-2">
-          <span class="font-semibold text-primary-dark text-2xl">Sead (Senin Absen Daging)</span> adalah gerakan yang mengajak masyarakat untuk tidak mengonsumsi daging setiap hari Senin sebagai langkah sederhana menuju hidup yang lebih sehat dan lingkungan yang lebih lestari. Konsumsi daging berlebih berkontribusi pada emisi gas rumah kaca, pemborosan air bersih, serta kerusakan lingkungan. <span class="text-primary-dark font-semibold">Sead</span> hadir sebagai solusi kecil yang bisa dilakukan semua orang, mulai dari anak muda, orang tua, keluarga, hingga komunitas.
+          <span class="font-semibold text-primary-dark text-lg md:text-2xl">Sead (Senin Absen Daging)</span> adalah gerakan yang mengajak masyarakat untuk tidak mengonsumsi daging setiap hari Senin sebagai langkah sederhana menuju hidup yang lebih sehat dan lingkungan yang lebih lestari. Konsumsi daging berlebih berkontribusi pada emisi gas rumah kaca, pemborosan air bersih, serta kerusakan lingkungan. <span class="text-primary-dark font-semibold">Sead</span> hadir sebagai solusi kecil yang bisa dilakukan semua orang, mulai dari anak muda, orang tua, keluarga, hingga komunitas.
         </p>
         <p class="mb-2">
-          Dengan tidak makan daging satu hari dalam seminggu, kita bisa mengurangi dampak negatif terhadap bumi tanpa harus mengubah gaya hidup secara drastis. Gerakan ini mengajak kita untuk lebih sadar terhadap apa yang kita konsumsi dan bagaimana hal itu memengaruhi masa depan. Satu hari, satu langkah, satu perubahan — mulai dari Senin.
+          Dengan tidak makan daging satu hari dalam seminggu, kita bisa mengurangi dampak negatif terhadap bumi tanpa harus mengubah gaya hidup secara drastis. Gerakan ini mengajak kita untuk lebih sadar terhadap apa yang kita konsumsi dan bagaimana hal itu memengaruhi masa depan. Satu hari, satu langkah, satu perubahan, mulai dari Senin.
         </p>
       </div>
 
@@ -234,7 +234,7 @@
 
 
 
-  <!-------- Section Manfaat -------->
+  <!-------- Section Manfaat ----->
   <section id="manfaat" class=" w-full max-w-screen px-4 sm:px-6 md:px-10 lg:px-20 mt-24"></section>
     <div class="text-center mb-10">
       <h2 class="font-bold font-spicy text-center mb-2 text-[52px] lg:text-[72px] text-secondary drop-shadow-2xl">
@@ -407,7 +407,7 @@
 
 
 
-  <!-- section berita -->
+  <!------- section berita ---->
   <section id="berita" class="w-full max-w-screen h-full px-4 sm:px-6 md:px-10 lg:px-20 mt-16 sm:mt-20 md:mt-24 pb-10 md:pb-20">
     <h2 class="font-bold font-spicy text-center mb-6 sm:mb-8 text-shadow-lg text-shadow-primary text-4xl sm:text-5xl md:text-6xl lg:text-[72px] text-primary-dark">
       Berita Terkini
@@ -735,7 +735,7 @@
 
       </div> 
     <div class="border-t border-putih/20 mt-10 pt-6 text-center text-xs text-putih/60">
-      &copy; 2025 Sead. All rights reserved.
+      &copy; 2025 Sead. SIJAWARA SMKN 26 JAKARTA.
     </div>
   </footer>
 
